# rag_web_scraping

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  ingest.py  main.py
app/api/: dependencies.py  routes.py  schemas.py
app/domain/: __init__.py  models.py  ports.py
app/infrastructure/: __init__.py  database.py  factory.py  fastembed.py  file_store.py  ollama.py  qdrant_store.py
app/services/: indexing.py  rag.py  reranking.py  scraper.py
app/static/: analytics.html  analytics.js  app.js  index.html  styles.css
tests/: fakes.py  test_api.py  test_chunking.py  test_fastembed.py  test_file_store.py  test_ollama.py  test_rag.py  test_repository.py  test_reranking.py  test_scraper.py
