[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bbva-rag-assistant"
version = "0.1.0"
description = "RAG assistant over public banking website content"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4==4.12.3",
  "fastapi==0.115.6",
  "httpx==0.28.1",
  "langgraph==1.2.9",
  "langchain-ollama==1.1.0",
  "langchain-text-splitters==1.1.2",
  "pydantic-settings==2.7.1",
  "qdrant-client==1.12.1",
  "sqlalchemy==2.0.36",
  "uvicorn[standard]==0.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-asyncio==0.25.0",
  "pytest-cov==6.0.0",
  "respx==0.22.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
